Wed Oct 15 15:03:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          SuperSonic also uses unicode

        * config/openssl.mpb:
        * config/xerces.mpb:
          Removed reference to borland template which has been removed

        * config/qt3.mpb:
          Added this file. Just derived on qt but makes it easier to
          explicitly derive from qt3 or qt4

Tue Oct 14 11:47:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          Updated SuperSonic SDK settings

Fri Oct 10 08:58:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          Add iphlpapi to WinCE6

Thu Oct  9 15:14:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          Define UNDER_CE as $(CEVER) with WinCE6

Thu Oct  9 09:28:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          Added Windows Mobile 6 Professional SDK (ARMV4I)

Tue Oct  7 14:08:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Revert change below, doesn't work as expected

        Tue Oct  7 13:55:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:
          Include vc8platforms so that we can easily generate nmake projects for
          WinCE platforms

Tue Oct  7 13:55:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:
          Include vc8platforms so that we can easily generate nmake projects for
          WinCE platforms

        * templates/vc8platforms.mpt:
          Added new WinCE mobile platform

Sat Oct  4 20:52:22 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * config/qt.mpb:

          Added support for building 64-bit.

        * modules/ProjectCreator.pm:
